# sandbox-agent

./: .gitignore  README.md  config.py  pyproject.toml
demo/: task.md
demo/input/: feedback.csv  inventory.csv
demo/output/: Engineering_Change_Recommendations.txt
examples/input/: customers.csv  sales.csv
sandbox_agent/: agent.py  cli.py  config.py  sandbox.py  template.py  tools.py
src/: agent.py  cli.py  sandbox.py  template.py
