[project]
name = "sandbox-agent"
version = "0.1.0"
description = "Agent that runs code in an isolated E2B sandbox"
requires-python = ">=3.12"
dependencies = [
    "e2b>=2.19.0",
    "e2b-code-interpreter>=2.6.0",
    "ipykernel>=7.2.0",
    "anthropic>=0.52.0",
    "python-dotenv>=1.2.2",
    "claude-agent-sdk>=0.2.110",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

